syntax = "proto3";

package management;

option go_package = "github.com/makhkets/management/pkg/api/management/v1;managementv1";

import "google/protobuf/timestamp.proto";

// ============================================================================
// MESSAGES - Plans (Тарифные планы)
// ============================================================================

message Plan {
  int32 id = 1;
  string name = 2;
  int32 cpu = 3;
  int32 ram_mb = 4;
  int32 disk_gb = 5;
  double price_month = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
}

message CreatePlanRequest {
  string name = 1;
  int32 cpu = 2;
  int32 ram_mb = 3;
  int32 disk_gb = 4;
  double price_month = 5;
}

message UpdatePlanRequest {
  int32 id = 1;
  optional string name = 2;
  optional int32 cpu = 3;
  optional int32 ram_mb = 4;
  optional int32 disk_gb = 5;
  optional double price_month = 6;
  optional bool is_active = 7;
}

message GetPlanRequest {
  int32 id = 1;
}

message ListPlansRequest {
  bool active_only = 1;
}

message ListPlansResponse {
  repeated Plan plans = 1;
}
